# ampscz-langsamp-release-pipeline

./: README.md  pyproject.toml
cli/: fix_interview_labels.py  organize_label_and_init_tsv.py  tag_grammatical_feats.py  verify_interview_labels.py
data/files/: SUBTLEX-US.csv  tags_upos_xpos.txt
features/: frequency.py  grammar.py
misc/: determine_language.py  verify_interview_types.py
utils/: clean_files.py  determine_language.py  organize_files.py  transcripts.py
