[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nda-release-4-pipeline"
version = "0.1.0"
description = "Utilities for structuring and parsing transcripts for the AMPSCZ NDA Data Release 4"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Benjamin Dixon"}
]

dependencies = [
    "vllm",
    "polars",
    "stanza",
    "rich",
    "spacy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "utils*", "features*", "data*", "examples*"]